--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -1,6 +1,14 @@
-.navSearch {
-  /* position: absolute;
-  top: 15px; */
+.navSearch{
+  position: absolute !important;
+  width: 100%;
+  bottom: 10px;
+}
+.navElementWrapper{
+ position: relative;
+ height: 100%;
+}
+.navSearchBar{
+  width: 95%;
 }
 .logo {
   font-family: "Walt";
@@ -17,10 +25,12 @@
 }
 
 .navbarLogin{
-  margin-top: 30px;
+  position: absolute;
+  bottom: 10px;
+  right: 0;
   text-align: right;
   font-size: 1.2em;
-  color: black;
+  color: #666;
 }
 .navbarLoginText{
   text-decoration-line: underline;
@@ -29,5 +39,5 @@
 }
 .navbarLoginText:hover{
   cursor: pointer;
-  color: #666;
+  color: black;
 }
