--- a/src/style/splash.css
+++ b/src/style/splash.css
@@ -5,14 +5,22 @@
   top: 0;
   left: 0;
 }
+.splashBar {
+  line-height: 1.1;
+  padding-top: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+}
 .splashGreeting{
   background-color: white;
   border-radius: 5px;
 }
 .splashLogin{
   position: absolute;
-  top: 40px;
-  right: 19%;
+  bottom: 10px;
+  right: 0;
   text-align: right;
   font-size: 1.2em;
   color: #dddddd;
